@startuml
!define TABLE (T, #FFAAAA) DB Table

class event <<TABLE>>
event : aggregate_id:uuid
event : event_id:uuid
event : next_event_id:uuid
event : last_event_id:uuid
event : creation_time:varchar
event : version:integer
event : data:JSON

class vm_type <<TABLE>>
vm_type : vm_type_id:uuid
vm_type : name:varchar
vm_type : description:varchar

class vm <<TABLE>>
vm : vm_id:uuid
vm : vm_type_id:uuid
vm : query_object_id:uuid

class vm_cache <<TABLE>>
vm_cache : vm_id:uuid
vm_cache : creation_time:varchar
vm_cache : data:JSON

class query_object <<TABLE>>
query_object : query_object_id:uuid

class query_object_kv_pair <<TABLE>>
query_object_kv_pair : query_object_id:uuid
query_object_kv_pair : kv_pair_id:uuid

class kv_pair <<TABLE>>
kv_pair : kv_pair_id:uuid
kv_pair : map_key_id:uuid
kv_pair : value:varchar

class map_key <<TABLE>>
map_key : map_key_id:uuid
map_key : name:varchar
map_key : description:varchar

class vm_event <<TABLE>>
vm_event : vm_id:uuid
vm_event : event_id:uuid

vm "m" -- "1" query_object
vm_type "1" -- "m" vm
vm "1" -- "m" vm_event
vm_event "1" -- "1" event
vm_cache "1" -- "1" vm
query_object_kv_pair "1" -- "m" query_object
query_object_kv_pair "1" -- "m" kv_pair
map_key "1" -- "m" kv_pair
@enduml
